--- a/web/src/index.html
+++ b/web/src/index.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>CRM Builder</title>
+        <title>Box 9 Drumline LED Config Manager</title>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto">
-        <link rel="stylesheet" href="css/styles.css">
 	    <link rel="shortcut icon" href="assets/favicon.ico">
         <style type="text/css">
             body {
